added the tailwind configuration and code part

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
+/* @layer base {
   body {
     @apply antialiased;
   }
@@ -16,4 +16,4 @@
     -ms-overflow-style: none;
     scrollbar-width: none;
   }
-}
+} */
